# oop_exercise_04

./: CMakeLists.txt  main.cpp  report.doc  templates.h  triangle.cpp  triangle.h  ~$report.doc  ~WRL0001.tmp
src/: octagon.h  square.h  templates.h  triangle.h  vertex.h
test/: test.cpp
